--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -2,9 +2,9 @@
 	text-align: center;
 	background: white;
 	display: inline-block;
-	width: 300px;
+	width: 20%;
 	padding: 0;
-	margin: 20px;
+	margin: 2.5%;
 }
 
 .card-container img {
@@ -14,10 +14,18 @@
 	height: auto;
 }
 
+.card-container .details {
+	display: flex;
+	height: 5vw;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
 .card-container h2 {
 	color: #d16666;
-	font-size: 20px;
-	padding: 20px 10px 5px;
+	font-size: 1.5vw;
+	padding: 0px 10px;
 }
 
 .card-container div div {
@@ -27,7 +35,8 @@
 
 .card-container p {
 	color: white;
-	padding: 5px 10px 20px;
+	padding: 5px 10px;
+	font-size: 1vw;
 }
 
 .card-container div {
