--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Lato|Rajdhani:400,700&display=swap");
+
 * {
 	padding: 0;
 	margin: 0;
@@ -6,6 +8,6 @@
 body {
 	margin: 0;
 	padding: 0;
-	font-family: sans-serif;
-	background: linear-gradient(to right, #c1c1c1 0%, #2c4251 100%);
+	font-family: "Lato", sans-serif;
+	background: linear-gradient(to right, #cc9fc2 0%, #2c4251 100%);
 }
